@@ -1,3 +1,10 @@
+2013-03-04  Simon Cook  <simon.cook@embecosm.com>
+
+	* build-elf32.sh: Add support for building big endian ELF tool chain.
+	* build-uclibc.sh: Set build_dir based on endianness of tools.
+	* run-elf32-tests.sh: Set test directories based on endianness.
+	* run-uclibc-tests.sh: Likewise.
+
 2013-02-27  Jeremy Bennett <jeremy.bennett@embecosm.com>
 
 	* build-uclibc.sh: Add ARC_LEGACY_PTRACE_ABI defintion when
